upload pdf evidence

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,8 @@ PG_DBNAME =
 
 # JSONWEBTOKEN CREDENTIALS
 JWT_SECRET = xo9tF4opcLutUgUa6BB6DM7JUf6m36W9HQZrHJ1h
+
+# CLOUDINARY
+CLOUDINARY_NAME = ''
+CLOUDINARY_KEY = ''
+CLOUDINARY_SECRET = ''
