--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.40.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
@@ -19,8 +20,10 @@
     "express-validator": "^7.0.1",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
+    "sharp": "^0.32.5",
     "slugify": "^1.6.6",
     "typeorm": "^0.3.17",
     "uuid": "^9.0.0"
@@ -31,7 +34,9 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.3.1",
+    "@types/sharp": "^0.32.0",
     "@types/uuid": "^9.0.2",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
