--- a/.env.example
+++ b/.env.example
@@ -7,13 +7,13 @@ APP_PORT = 3000
 PG_HOST = localhost
 PG_PORT = 5432
 PG_USERNAME = postgres
-PG_PASSWORD = 
-PG_DBNAME = 
+PG_PASSWORD =
+PG_DBNAME =
 
 # JSONWEBTOKEN CREDENTIALS
-JWT_SECRET = xo9tF4opcLutUgUa6BB6DM7JUf6m36W9HQZrHJ1h
+JWT_SECRET =
 
-# CLOUDINARY
-CLOUDINARY_NAME = ''
-CLOUDINARY_KEY = ''
-CLOUDINARY_SECRET = ''
+# AWS S3
+S3_ACCESS_KEY =
+S3_SECRET_KEY =
+S3_REGION =
