--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "start:dev": "nodemon"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.391.0",
+    "@aws-sdk/s3-request-presigner": "^3.391.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
-    "cloudinary": "^1.40.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
