remove path aliases

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "surat-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node dist/index.js",
+    "build": "set NODE_ENV=production && tsc",
+    "start": "set NODE_ENV=production && node ./dist/index.js",
     "start:dev": "nodemon"
   },
   "dependencies": {
